--- a/cloud-common/pom.xml
+++ b/cloud-common/pom.xml
@@ -36,6 +36,7 @@
         <module>common-cloud-gateway</module>
         <module>common-cloud-uid</module>
         <module>common-cloud-message</module>
+        <module>common-cloud-redis</module>
     </modules>
 
 
