--- a/cloud-common/common-cloud-cache/pom.xml
+++ b/cloud-common/common-cloud-cache/pom.xml
@@ -23,8 +23,8 @@
             <artifactId>cloud-common-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-redis</artifactId>
+            <groupId>com.tj.cloud</groupId>
+            <artifactId>common-cloud-redis</artifactId>
         </dependency>
         <dependency>
             <groupId>net.oschina.j2cache</groupId>
@@ -73,10 +73,6 @@
         <dependency>
             <groupId>com.alibaba.fastjson2</groupId>
             <artifactId>fastjson2</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
