--- a/cloud-system/cloud-system-biz/pom.xml
+++ b/cloud-system/cloud-system-biz/pom.xml
@@ -67,6 +67,10 @@
             <artifactId>cloud-system-api</artifactId>
         </dependency>
         <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-http</artifactId>
         </dependency>
