--- a/cloud-common/common-cloud-feign/pom.xml
+++ b/cloud-common/common-cloud-feign/pom.xml
@@ -22,6 +22,12 @@
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-starter-web</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!--feign 依赖-->
         <dependency>
