--- a/cloud-common/common-cloud-gray/pom.xml
+++ b/cloud-common/common-cloud-gray/pom.xml
@@ -9,9 +9,22 @@
         <version>1.0.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
-
-    <groupId>com.tj.cloud</groupId>
     <artifactId>common-cloud-gray</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.tj.cloud</groupId>
+            <artifactId>common-cloud-gateway</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.tj.cloud</groupId>
+            <artifactId>common-cloud-feign</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>transmittable-thread-local</artifactId>
+            <version>2.12.0</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
